RESOLVED FIXED299820
Fix new Clang 21 warnings
https://bugs.webkit.org/show_bug.cgi?id=299820
Summary Fix new Clang 21 warnings
Michael Catanzaro
Reported 2025-09-29 13:14:07 PDT
This bug is for fixing everything except -Wcharacter-conversion. We have bug #299689 for that.
Attachments
Michael Catanzaro
Comment 1 2025-09-29 13:23:07 PDT
EWS
Comment 2 2025-09-29 14:33:14 PDT
Committed 300714@main (8516f762b93d): <https://commits.webkit.org/300714@main> Reviewed commits have been landed. Closing PR #51520 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-29 14:34:12 PDT
Radar WebKit Bug Importer
Comment 4 2025-09-29 14:34:12 PDT
Note You need to log in before you can comment on or make changes to this bug.