Fix new Clang 21 warnings https://bugs.webkit.org/show_bug.cgi?id=299820

Reviewed by Yusuke Suzuki.

This mostly fixes -Wunnecessary-virtual-specifier warnings (virtual
method is inside a 'final' class and can never be overridden). There is
also one -Wsometimes-uninitialized warning fixed by using
RELEASE_ASSERT_NOT_REACHED() to ensure the compiler knows the code
supposed to be unreachable.

Canonical link: https://commits.webkit.org/300714@main